# treestruct

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: treestruct.ipynb
treestruct/: __init__.py  helpers.py  visualize.py
