[tool.poetry]
name = "treestruct"
version = "0.1.4"
description = "Simplify the task of creating, traversing, manipulating and visualizing tree structures"
authors = ["Shady Rafehi <shadyrafehi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
graphviz = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
